# euno

./: README.md  render.yaml
.next/: trace
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: auth.py  db.py  main.py
backend/app/agent/: agent.py  prompt.py
backend/app/config/: production.py  settings.py
backend/app/routes/: agent_routes.py
backend/app/services/: agent_service.py  audio_utils.py  memory_service.py  streaming_tts_service.py  tts_service.py
docs/: GTM-STRATEGY.md
frontend/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/db/: schema.sql
frontend/scripts/: reset-db.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/contact/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/price/: page.tsx
frontend/src/app/sign-in/: page.tsx
frontend/src/components/: landing.tsx  loader.tsx  logo.tsx  nav-landing.tsx  navbar-main.tsx  pricing.tsx  pricingButton.tsx  user-settings.tsx
frontend/src/components/therapy/: beamComponent.tsx  flowingMenu.tsx  metaBalls.tsx  voice-chat.tsx
frontend/src/config/: auth.ts  const.ts  site-config.ts
frontend/src/hooks/: websocket.ts
frontend/src/lib/db/: server.ts
frontend/src/lib/message-limits/: server.ts
frontend/src/lib/messages/: server.ts
frontend/src/lib/razorpay/: client.ts
frontend/src/lib/summary/: prompt.ts  server.ts
frontend/src/store/: useUser.ts  user.ts  voice-chat.ts
frontend/src/types/: messages.ts  users.ts
(+5 files in other folders)
