[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepgram-sdk>=4.8.1",
    "fastapi>=0.117.1",
    "google-genai>=1.40.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
    "python-jose[cryptography]>=3.3.0",
    "websockets>=12.0",
    "mem0ai>=2.0.5",
    "psycopg-pool>=3.3.1",
]
